--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -23,11 +23,11 @@ content %}
       <td><label>Role</label></td>
       <td>{{ user.Role }}</td>
     </tr>
+    {% if user.contact %}
     <tr>
       <td><label>Member ID</label></td>
-      <td>{{ user.Member_ID if user.Member_ID else '' }}</td>
+      <td>{{ user.contact.Member_ID if user.contact.Member_ID else '' }}</td>
     </tr>
-    {% if user.contact %}
     <tr>
       <td><label for="email">Email:</label></td>
       <td>
@@ -51,20 +51,20 @@ content %}
       </td>
     </tr>
     <tr>
-      <td><label>Completed Paths:</label></td>
-      <td>{{ user.contact.Completed_Paths if user.contact else '' }}</td>
-    </tr>
-    <tr>
       <td><label>Current Path</label></td>
-      <td>{{ user.Current_Path }}</td>
+      <td>{{ user.contact.Current_Path if user.contact.Current_Path else '' }}</td>
     </tr>
     <tr>
       <td><label>Credential:</label></td>
-      <td>{{ user.credentials if user else '' }}</td>
+      <td>{{ user.contact.credentials if user.contact.credentials else '' }}</td>
     </tr>
     <tr>
       <td><strong>Next Project:</strong></td>
-      <td>{{ user.Next_Project }}</td>
+      <td>{{ user.contact.Next_Project if user.contact.Next_Project else '' }}</td>
+    </tr>
+    <tr>
+      <td><label>Mentor:</label></td>
+      <td>{{ user.contact.mentor.Name if user.contact.mentor else '' }}</td>
     </tr>
     <tr>
       <td><label for="bio">Bio:</label></td>
