refactor: reorganize CSS files into modular core, components, pages, and themes directories.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,48 +14,30 @@
     />
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/base.css') }}"
+      href="{{ url_for('static', filename='css/core/base.css') }}"
     />
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/navigation.css') }}"
+      href="{{ url_for('static', filename='css/core/navigation.css') }}"
     />
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/forms.css') }}"
+      href="{{ url_for('static', filename='css/components/forms.css') }}"
     />
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/settings.css') }}"
+      href="{{ url_for('static', filename='css/components/tables.css') }}"
     />
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/tables.css') }}"
+      href="{{ url_for('static', filename='css/components/modals.css') }}"
     />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/modals.css') }}"
-    />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/agenda.css') }}"
-    />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/speech_logs.css') }}"
-    />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/pathway_library.css') }}"
-    />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/booking.css') }}"
-    />
+    
     {% block head_extra %}{% endblock %}
+    
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/responsive.css') }}"
+      href="{{ url_for('static', filename='css/core/responsive.css') }}"
     />
     <link
       rel="stylesheet"
