--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -3,7 +3,7 @@
 {% block title %}Role Booking{% endblock %}
 
 {% block head_extra %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/booking.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/pages/booking.css') }}">
 {% endblock %}
 
 
