--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -2,7 +2,7 @@
 {% block title %}Contacts{% endblock %} 
 
 {% block head_extra %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/contacts.css') }}" />
+<link rel="stylesheet" href="{{ url_for('static', filename='css/pages/contacts.css') }}" />
 {% endblock %}
 
 {% block content %}
