--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,11 +6,11 @@
     <title>Login</title>
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/login.css') }}"
+      href="{{ url_for('static', filename='css/pages/login.css') }}"
     />
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/forms.css') }}"
+      href="{{ url_for('static', filename='css/components/forms.css') }}"
     />
     <link
       rel="stylesheet"
