--- a/app/templates/agenda.html
+++ b/app/templates/agenda.html
@@ -2,6 +2,10 @@
 
 {% block title %}Meeting Agenda{% endblock %}
 
+{% block head_extra %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/pages/agenda.css') }}">
+{% endblock %}
+
 {% block content %}
 <div id="agenda-content"> {# Wrapper for edit-mode class #}
     <div class="agenda-header-container">
