--- a/app/templates/roster.html
+++ b/app/templates/roster.html
@@ -3,8 +3,8 @@
 {% block title %}Meeting Roster{% endblock %}
 
 {% block head_extra %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/roster.css') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/autocomplete.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/pages/roster.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/components/autocomplete.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='vendor/css/fontawesome.min.css') }}">
 {% endblock %}
 
