--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -1,9 +1,13 @@
-{% extends "base.html" %} {% block head %} {{ super() }}
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-/>
-{% endblock %} {% block title %}Settings{% endblock %} {% block content %}
+{% extends "base.html" %}
+
+{% block title %}Settings{% endblock %}
+
+{% block head_extra %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/pages/settings.css') }}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+{% endblock %}
+
+{% block content %}
 <h1>System Settings</h1>
 
 <div class="settings-container">
