--- a/app/templates/speech_logs.html
+++ b/app/templates/speech_logs.html
@@ -2,6 +2,10 @@
 
 {% block title %}Speech Logs{% endblock %}
 
+{% block head_extra %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/pages/speech_logs.css') }}">
+{% endblock %}
+
 {% block content %}
     <h1>Activity Logs</h1>
     
