--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <title>Login</title>
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/pages/login.css') }}"
-    />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/components/forms.css') }}"
-    />
+    {% assets "css_all" %}
+    <link rel="stylesheet" href="{{ ASSET_URL }}">
+    {% endassets %}
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='vendor/css/fontawesome.min.css') }}"
